<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/idRLBSheet"
    android:background="@color/blue_shade_3">

    <TextView
        android:id="@+id/idTVRecipeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:padding="4dp"
        android:text="@string/recipe_name"
        android:textColor="@color/blue_shade_2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/idIVRecipe"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/idTVRecipeName"
        android:src="@mipmap/ic_launcher"
        android:padding="4dp"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/idTVDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVRecipeName"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toRightOf="@id/idIVRecipe"
        android:padding="3dp"
        android:text="@string/description"
        android:textColor="@color/blue_shade_2" />

    <TextView
        android:id="@+id/idTVSuitedFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVDescription"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toRightOf="@id/idIVRecipe"
        android:padding="3dp"
        android:text="Suitable For"
        android:textColor="@color/blue_shade_2" />

    <TextView
        android:id="@+id/idTVCookingTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVSuitedFor"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toRightOf="@id/idIVRecipe"
        android:padding="3dp"
        android:text="@string/cooking_time"
        android:textColor="@color/blue_shade_2"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/idBtnGroup1"
        android:layout_below="@id/idTVCookingTime">

        <Button
            android:id="@+id/idBtnEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/edit_recipe"
            android:textAllCaps="false"
            android:backgroundTint="@android:color/holo_red_light"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/idBtnViewDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/view_details"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>