<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/idRLHome"
    android:background="@color/blue_shade_1"
    tools:context=".PublicRecipesActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRVRecipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/idPBLoading"
        android:layout_width="wrap_content"
...
